--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     font-family: 'Fredoka One', cursive;
-    box-sizing: border-box;
 }
 .banner{
     width: 100%;
@@ -93,20 +92,25 @@ button:hover span{
     width: 100%;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
-    background: #421628
+    background: #fcfcfc;
 }
 footer{
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    background: #696969;
+    background: #111;
     height: auto;
     width: 100vw;
+    font-family: "Open Sans";
     padding-top: 40px;
     color: #fff;
-
 }
 .footer-content{
     display: flex;
@@ -135,7 +139,7 @@ footer{
     margin: 1rem 0 3rem 0;
 }
 .socials li{
-    margin: 15px;
+    margin: 0 10px;
 }
 .socials a{
     text-decoration: none;
@@ -144,12 +148,14 @@ footer{
 .socials a i{
     font-size: 1.1rem;
     transition: color .4s ease;
+
 }
 .socials a:hover i{
-    color: #c7265c;
+    color: aqua;
 }
+
 .footer-bottom{
-    background: #421628;
+    background: #000;
     width: 100vw;
     padding: 20px 0;
     text-align: center;
@@ -158,4 +164,9 @@ footer{
     font-size: 14px;
     word-spacing: 2px;
     text-transform: capitalize;
+}
+.footer-bottom span{
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
 }
