--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Fredoka One', cursive;
+    box-sizing: border-box;
 }
 .banner{
     width: 100%;
@@ -91,12 +92,6 @@ span{
 button:hover span{
     width: 100%;
 }
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 body{
     background: #fcfcfc;
 }
@@ -108,7 +103,6 @@ footer{
     background: #111;
     height: auto;
     width: 100vw;
-    font-family: "Open Sans";
     padding-top: 40px;
     color: #fff;
 }
@@ -151,7 +145,7 @@ footer{
 
 }
 .socials a:hover i{
-    color: aqua;
+    color: #c7265c;
 }
 
 .footer-bottom{
@@ -164,9 +158,4 @@ footer{
     font-size: 14px;
     word-spacing: 2px;
     text-transform: capitalize;
-}
-.footer-bottom span{
-    text-transform: uppercase;
-    opacity: .4;
-    font-weight: 200;
 }
