--- a/styles/style.css
+++ b/styles/style.css
@@ -126,10 +126,9 @@ footer{
     margin: 0 10px;
 }
 .socials a{
-    text-decoration: none;
     color: #fff;
-    font-size: 1.1rem;
-    transition: 0.5s ;
+    font-size: 1.1;
+    transition: 0.5s;
 }
 .socials a:hover{
     color: #c7265c;
@@ -144,5 +143,4 @@ footer{
 .footer-bottom p{
     font-size: 14px;
     word-spacing: 2px;
-    text-transform: capitalize;
 }
