--- a/styles/style.css
+++ b/styles/style.css
@@ -110,17 +110,17 @@ footer{
     text-align: center;
 }
 .footer-content h3{
-    font-size: 1.8rem;
+    font-size: 1.8;
     font-weight: 400;
     text-transform: capitalize;
-    line-height: 3rem;
+    line-height: 3;
 }
 .socials{
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 1rem 0 3rem 0;
+    margin: 1 0 3 0;
 }
 .socials li{
     margin: 0 10px;
