--- a/styles/style.css
+++ b/styles/style.css
@@ -128,8 +128,8 @@ footer{
 .socials a{
     text-decoration: none;
     color: #fff;
-    font-size: 1.1;
-    transition: 0.5s;
+    font-size: 1.1rem;
+    transition: color .4s ease;
 }
 .socials a:hover{
     color: #c7265c;
@@ -144,4 +144,5 @@ footer{
 .footer-bottom p{
     font-size: 14px;
     word-spacing: 2px;
+    text-transform: capitalize;
 }
