--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Varela Round', sans-serif;
     box-sizing: border-box;
 }
 .banner{
