--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.65)),url(/resources/bg.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.65)),url(/resources/moon_bg.jpg);
     background-size: cover;
     background-position: center;
 }
