--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ body{
 }
 footer{
     background: #0b1f57;
-    height: auto;
+    height: 2.5rem;
     width: 100vw;
     padding-top: 40px;
     color: #fff;
