--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.65)),url(/resources/moon_bg.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.65)),url(/resources/moon_bg2.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -39,7 +39,7 @@
     content: '';
     height: 3px;
     width: 0;
-    background: #11328d;
+    background: #ff0000;
     position: absolute;
     left: 0;
     bottom: -5px;
@@ -66,13 +66,13 @@
     line-height: 25px;
 }
 button{
-    width: 200px;
+    width: 150px;
     padding: 15px 0;
     text-align: center;
-    margin: 20px 10px;
+    margin: 20px 15px;
     border-radius: 10px;
     font-weight: bold;
-    border: 2px solid #11328d;
+    border: 2px solid #ffffff;
     background: transparent;
     color: #fff;
     cursor: pointer;
@@ -80,7 +80,7 @@ button{
     overflow: hidden;
 }
 span{
-    background: #11328d;
+    background: #a50000;
     height: 100%;
     width: 0;
     border-radius: 10px;
@@ -94,13 +94,13 @@ button:hover span{
     width: 100%;
 }
 body{
-    background: #11328d;
+    background: #6d0e0e;
 }
 footer{
-    background: #0b1f57;
-    height: 2.5rem;
-    width: 100vw;
-    padding-top: 40px;
+    background: #ffffff;
+    height: 0rem;
+    width: 98.2vw;
+    padding-top: 5px;
     color: #fff;
 }
 .footer-content{
@@ -111,20 +111,20 @@ footer{
     text-align: center;
 }
 .footer-content h3{
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: 400;
     text-transform: capitalize;
-    line-height: 3rem;
+    line-height: 4rem;
 }
 .socials{
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 1rem 0 3rem 0;
+    margin: 0rem 0 1rem 0;
 }
 .socials li{
-    margin: 0 10px;
+    margin: 0 15px;
 }
 .socials a{
     text-decoration: none;
@@ -133,12 +133,12 @@ footer{
     transition: color .4s ease;
 }
 .socials a:hover{
-    color: #11328d;
+    color: #a80000;
 }
 
 .footer-bottom{
-    background: #050e27;
-    width: 100vw;
+    background: #270505;
+    width: 98.2vw;
     padding: 20px 0;
     text-align: center;
 }
@@ -151,5 +151,5 @@ footer{
     transition: color .4s ease;
 }
 .footer-bottom a:hover{
-    color: #11328d;
+    color: #a80000;
 }
