--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: 'Fredoka One', cursive;
     box-sizing: border-box;
+    
 }
 .banner{
     width: 100%;
@@ -10,25 +11,29 @@
     background-image: linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.65)),url(/resources/moon_bg2.jpg);
     background-size: cover;
     background-position: center;
+    
 }
 .navbar{
     width: 95%;
     margin: auto;
-    padding: 20px 0;
+    padding: 20px 0;    
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 .logo{
     width: 95px;
     border-radius: 10px;
     cursor: pointer;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.89);
 }
 .navbar ul li{
     list-style: none;
     display: inline-block;
     margin: 0 20px;
     position: relative;
+    
 }
 .navbar ul li a{
     text-decoration: none;
@@ -44,6 +49,7 @@
     left: 0;
     bottom: -5px;
     transition: 0.5s;
+    box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 .navbar ul li:hover:after{
     width: 100%;
@@ -64,6 +70,7 @@
     margin: 10px auto;
     font-weight: 100;
     line-height: 25px;
+    
 }
 button{
     width: 150px;
@@ -78,9 +85,10 @@ button{
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 span{
-    background: #a50000;
+    background: #831b1b;
     height: 100%;
     width: 0;
     border-radius: 10px;
@@ -89,19 +97,22 @@ span{
     bottom: 0;
     z-index: -1;
     transition: 0.5s;
+    box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 button:hover span{
     width: 100%;
+    
 }
 body{
     background: #6d0e0e;
 }
 footer{
-    background: #ffffff;
+    background: rgb(255, 255, 255);
     height: 0rem;
     width: 99.1vw;
     padding-top: 5px;
-    color: #fff;
+    color: rgb(255, 255, 255); 
+    box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 .footer-content{
     display: flex;
@@ -109,6 +120,7 @@ footer{
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 .footer-content h3{
     font-size: 2rem;
@@ -122,6 +134,7 @@ footer{
     align-items: center;
     justify-content: center;
     margin: 0rem 0 1rem 0;
+    
 }
 .socials li{
     margin: 0 15px;
@@ -149,6 +162,7 @@ footer{
     word-spacing: 2px;
     text-transform: none;
     transition: color .4s ease;
+    
 }
 .footer-bottom a:hover{
     color: #a80000;
