--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
     padding: 20px 0;    
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: left;
     
 }
 .logo{
@@ -44,7 +44,7 @@
     content: '';
     height: 3px;
     width: 0;
-    background: #ff0000;
+    background: #000000;
     position: absolute;
     left: 0;
     bottom: -5px;
@@ -88,7 +88,7 @@ button{
     box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 span{
-    background: #831b1b;
+    background: #000000;
     height: 100%;
     width: 0;
     border-radius: 10px;
@@ -104,7 +104,7 @@ button:hover span{
     
 }
 body{
-    background: #6d0e0e;
+    background: #3f3f3f;
 }
 footer{
     background: rgb(255, 255, 255);
@@ -146,11 +146,11 @@ footer{
     transition: color .4s ease;
 }
 .socials a:hover{
-    color: #a80000;
+    color: #000000;
 }
 
 .footer-bottom{
-    background: #270505;
+    background: #222222;
     width: 99.1vw;
     padding: 20px 0;
     text-align: center;
@@ -165,5 +165,5 @@ footer{
     
 }
 .footer-bottom a:hover{
-    color: #a80000;
+    color: #000000;
 }
