--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
     padding: 20px 0;    
     display: flex;
     align-items: center;
-    justify-content: left;
+    justify-content: space-between;
     
 }
 .logo{
