--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Nunito', sans-serif;
     box-sizing: border-box;
     
 }
@@ -44,7 +44,7 @@
     content: '';
     height: 3px;
     width: 0;
-    background: #000000;
+    background: #30007c;
     position: absolute;
     left: 0;
     bottom: -5px;
@@ -67,6 +67,7 @@
     margin-top: 80px;
 }
 .content p{
+    font-size: 20px;
     margin: 10px auto;
     font-weight: 100;
     line-height: 25px;
