--- a/styles/scrollbar.css
+++ b/styles/scrollbar.css
@@ -1,12 +1,13 @@
 ::-webkit-scrollbar{
     width: 10px;
+    transition: color .4s ease;
 }
 ::-webkit-scrollbar-track{
-    background: #f1f1f1; 
+    background: #3f3f3f; 
 }
 ::-webkit-scrollbar-thumb{
-    background: #888; 
+    background: #5f5f5f; 
 }
 ::-webkit-scrollbar-thumb:hover{
-    background: #555; 
+    background: #2e2e2e; 
 }
