--- a/styles/style.css
+++ b/styles/style.css
@@ -107,48 +107,13 @@ body{
     background: #3f3f3f;
 }
 footer{
-    background: rgb(255, 255, 255);
+    background: #5f5f5f;
     height: 0rem;
     width: 99.5vw;
     padding-top: 5px;
     color: rgb(255, 255, 255); 
     box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
-.footer-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    box-shadow: 0 5px 10px rgb(0, 0, 0);
-}
-.footer-content h3{
-    font-size: 2rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 4rem;
-}
-.socials{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0rem 0 1rem 0;
-    
-}
-.socials li{
-    margin: 0 15px;
-}
-.socials a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.1rem;
-    transition: color .4s ease;
-}
-.socials a:hover{
-    color: #000000;
-}
-
 .footer-bottom{
     background: #222222;
     width: 99.5vw;
@@ -162,7 +127,6 @@ footer{
     word-spacing: 2px;
     text-transform: none;
     transition: color .4s ease;
-    
 }
 .footer-bottom a:hover{
     color: #000000;
