--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,11 +15,6 @@ body{
     flex-direction: column;
     gap: 30px;
 }
-img{
-    position: relative;
-    z-index: -1;
-    background-size: cover;
-}
 h1{
     font-size: 2.5rem;
     color: #fff;
@@ -29,6 +24,17 @@ p{
     font-size: 1.3rem;
     color: rgb(150, 150, 150);
 }
+h2{
+    position: relative;
+    font-size: 1rem;
+    color: #646464;
+    text-decoration: none;
+}
+.socials{
+    display: flex;
+    flex-direction: row;
+}
+
 .socials a{
     position: relative;
     background: #444;
@@ -59,7 +65,6 @@ p{
 .socials a i{
     position: absolute;
     inset: 0;
-    display: block;
 }
 .socials  i::before{
     content: '';
@@ -92,4 +97,41 @@ p{
 .socials a:hover i::after{
     width: 20px;
     left: 80%;
+}
+
+.but {
+    float: left;
+    margin-top: 35px;
+    margin-left: 10px;
+    justify-content: center;
+    text-align: center;
+    flex-direction: row;
+  }
+
+/* Media Queries */
+
+@media (min-width:652px) and (max-width:1000px){
+    .socials{
+        flex-flow: wrap;
+        align-items: center;
+        justify-content: space-evenly;
+        
+    }
+    /* .one{
+        flex-direction:column;
+        align-items: center;
+    }
+    .two{
+        flex-direction:column;
+        align-items: center;
+    } */
+}
+@media (min-width:200px) and (max-width:652px){
+    .socials{
+        flex-direction: column;
+        /* flex-flow: wrap;
+        align-items: center;
+        justify-content: space-evenly; */
+        
+    } 
 }
