--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,19 +10,30 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 90vh;
     background: url(/media/background.svg);
     flex-direction: column;
     gap: 30px;
 }
 h1{
+    text-align: center;
     font-size: 2.5rem;
     color: #fff;
+    text-shadow: 0 0 25px #6163e2;
 }
 p{
     text-align: center;
     font-size: 1.3rem;
-    color: rgb(150, 150, 150);
+    color: #898bda;
+    text-shadow: 0 0 15px #606197;
+}
+.logo{
+    width: 95px;
+    
+}
+.logo:hover{
+    width: 105px;
+    transition: 0.5s;
 }
 .socials{
     display: flex;
@@ -31,7 +42,7 @@ p{
 
 .socials a{
     position: relative;
-    background: #444;
+    background: #898bda;
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
@@ -50,7 +61,7 @@ p{
     content: '';
     position: absolute;
     inset: 2px;
-    background: #0c0c0c;
+    background: #0e0f28;
 }
 .socials a span{
     position: relative;
@@ -68,7 +79,7 @@ p{
     width: 10px;
     height: 5px;
     border: 2px solid var(--clr);
-    background: #0c0c0c;
+    background: #0e0f28;
     transform: translateX(-50%);
     transition: 0.5s;
 }
@@ -84,7 +95,7 @@ p{
     width: 10px;
     height: 5px;
     border: 2px solid var(--clr);
-    background: #0c0c0c;
+    background: #0e0f28;
     transform: translateX(-50%);
     transition: 0.5s;
 }
