--- a/styles/style2.css
+++ b/styles/style2.css
@@ -165,8 +165,10 @@ body:before{
     transform: scale(1);
     width: 100vw;
     z-index: 0;
-    background-image: url('');
-    background-size: 100% 150%;
+    background: #272B36;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #2F3340, #344363);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #2F3340, #344363); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
 }
