--- a/styles/style2.css
+++ b/styles/style2.css
@@ -164,10 +164,11 @@ body:before{
     top: 0;
     transform: scale(1);
     width: 100vw;
-    z-index: 0;
-    background: #272B36;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #2F3340, #344363);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #2F3340, #344363); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background:  rgb(39, 43, 54);
+    background: -moz-linear-gradient(180deg, rgba(47,51,64,1) 0%, rgba(52,67,99,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(47,51,64,1) 0%, rgba(52,67,99,1) 100%);
+    background: linear-gradient(180deg, rgba(47,51,64,1) 0%, rgba(52,67,99,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2f3340",endColorstr="#344363",GradientType=1);
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
